; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_thread.c_uv_barrier_wait.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_thread.c_uv_barrier_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PTHREAD_BARRIER_SERIAL_THREAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_barrier_wait(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @pthread_barrier_wait(i32* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @PTHREAD_BARRIER_SERIAL_THREAD, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = call i32 (...) @abort() #3
  unreachable

14:                                               ; preds = %8
  br label %15

15:                                               ; preds = %14, %1
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @PTHREAD_BARRIER_SERIAL_THREAD, align 4
  %18 = icmp eq i32 %16, %17
  %19 = zext i1 %18 to i32
  ret i32 %19
}

declare dso_local i32 @pthread_barrier_wait(i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
